Write a view-count acceptance test with selenium

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ web:
     volumes:
         - web:/code
     ports:
-        - "80:5000"
+        - "5000:5000"
     links:
         - redis
     command: python app.py
@@ -11,3 +11,12 @@ redis:
     image: redis:2.8.19
     ports:
         - "6379:6379"
+tests:
+    build: .
+    volumes:
+        - web:/code
+    ports:
+        - "5000:5000"
+    links:
+        - redis
+    command: sh run_tests.sh
