--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,13 +1,16 @@
 # start with a base image
-FROM ubuntu:14.10
+FROM python:3.4.3
 
-# install dependencies
+# expose port app is running on
+EXPOSE 5000
+
+# install runtime dependencies
 RUN apt-get -y update
-RUN apt-get install -y python python-dev python-pip python-psycopg2
-RUN apt-get install -y nginx supervisor
 
-# add requirements.txt and install
-ADD requirements.txt /code/requirements.txt
+# add code
+ADD . /code
+
+# install requirements.txt
 RUN pip install -r /code/requirements.txt
 
 # set working diretory
