--- a/circle.yml
+++ b/circle.yml
@@ -4,9 +4,8 @@ machine:
 
 dependencies:
   override:
-    - pip install -r requirements.txt
+    - pip install -U docker-compose
 
 test:
   override:
-    - docker-compose run -d --no-deps web
-    - python web/tests.py
+    - docker-compose run -d --no-deps tests
