--- a/circle.yml
+++ b/circle.yml
@@ -8,4 +8,6 @@ dependencies:
 
 test:
   override:
-    - docker-compose run -d --no-deps tests
+    - docker-compose run -d --no-deps tests; sleep 10
+    - ls web/build
+    - mkdir -p $CIRCLE_TEST_REPORTS/pytest && cp web/build/junit.xml $CIRCLE_TEST_REPORTS/pytest/junit.xml
