Use docker directly instead of docker compose in circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ dependencies:
 
 test:
   override:
-    - docker-compose run -d --no-deps tests; sleep 10
+    - docker-compose run -d --no-deps tests python app.py
+    - docker run tests tox
     - ls web/build
     - mkdir -p $CIRCLE_TEST_REPORTS/pytest && cp web/build/junit.xml $CIRCLE_TEST_REPORTS/pytest/junit.xml
